syntax = "proto3";

message Prompt {
    oneof prompt {
        QuestionAnswer basicPrompt = 1;
        ApplicationPrompt applicationPrompt = 2;
        ClozePrompt clozePrompt = 3;
    }
}

message ApplicationPrompt {
    repeated QuestionAnswer variants = 1;
}

message QuestionAnswer {
    string question = 1;
    string answer = 2;
    string explanation = 3;
}

message ClozePrompt {
    string contents = 1;
}
